--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,80 @@
   padding: 0;
   margin: 0;
 }
+
+.navbar{
+  width: 100%;
+  height: 10vh;
+  background-color: black;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.footer {
+  width: 100%;
+  height: 10vh;
+  background-color: black;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.bookList {
+  min-height: 80vh;
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  justify-items: center;
+}
+.favorites {
+  min-height: 80vh;
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  justify-items: center;
+}
+
+.book {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 20px 0;
+}
+
+.bookDetails {
+  min-height: 80vh;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+img {
+  width: 300px;
+  height: 400px;
+  transition: all 0.3 ease;
+  margin: 20px 0;
+}
+
+img:hover {
+  transform: scale(1.1);
+}
+
+button {
+  padding: 10px;
+  background-color: black;
+  color: white;
+  width: 300px;
+  font-size: 20px;
+  border-radius: 5px;
+}
+
+a {
+  color: white;
+  text-decoration: none;
+}
